apps/staging/ingress/gateway-dns.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: dns-gateway-staging
  namespace: default
  # Gateway (assuming you have a CiliumLoadBalancerIPPool named single-node-pool)
  annotations:
    lbipam.cilium.io/ip-pool: single-node-pool
    lbipam.cilium.io/sharing-key: homelab
  labels:
    app: gateway-dns
    env: staging
spec:
  gatewayClassName: cilium
  listeners:
    - name: dns-udp
      port: 53
      protocol: UDP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              dns-ingress: "true"
    - name: dns-tcp
      port: 53
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              dns-ingress: "true"
