apps/staging/ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: app-gateway-staging
  namespace: default
  # Gateway (assuming you have a CiliumLoadBalancerIPPool named single-node-pool)
  # annotations:
  #   lbipam.cilium.io/ip-pool: single-node-pool
  #   lbipam.cilium.io/sharing-cross-namespace: pihole
  #   lbipam.cilium.io/sharing-key: homelab
  labels:
    app: gateway
    env: staging
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ip-pool: home-c-pool
      lbipam.cilium.io/sharing-cross-namespace: default,adguard-stage,audiobookshelf-stage,linkding-stage,mealie-stage,memos-stage,homeassistant-stage
      lbipam.cilium.io/sharing-key: homelab
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.stage.burntbytes.com"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              http-ingress: "true"
    - name: http-prod
      port: 80
      protocol: HTTP
      hostname: "*.burntbytes.com"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              http-ingress: "true"
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.stage.burntbytes.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: burntbytes-stage-tls
            namespace: security
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              http-ingress: "true"
    - name: https-prod
      port: 443
      protocol: HTTPS
      hostname: "*.burntbytes.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: burntbytes-prod-wildcard-tls
            namespace: security
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              http-ingress: "true"
  # - name: http-metrics
  #   port: 9100
  #   protocol: HTTP
  #   allowedRoutes:
  #     namespaces:
  #       from: Selector
  #       selector:
  #         matchLabels:
  #           http-ingress: "true"
